Terminada pantalla de login, en modo mock. Añadido también soporte para otro idioma (inglés), pendiente de rellenar.

--- a/dedicaMNS/res/values/strings.xml
+++ b/dedicaMNS/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-
     <string name="app_name">Dedica MNS</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Ajustes</string>
     <string name="title_activity_login">Dedica MNS</string>
-
+    
+    <string name="connectButtonS">Conectar</string>
+    <string name="remmbemberUserCheckS">Recordarme</string>    
+    <string name="userMNTextS">Usuario Media Net</string>
+    <string name="passMNTextS">Contraseña</string>
+    <string name="mnLogoS">Logo MediaNet</string>
 </resources>
