Creada "main activity", con imagebuttons para acceder a la consulta (y edicion individual) y para el proceso batch. También un botón de logout. Estos dos últimos, pendientes de implementar.

--- a/dedicaMNS/res/values/strings.xml
+++ b/dedicaMNS/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_month_view">Listado mes</string>
     <string name="title_activity_detail_day">Detalle día</string>
+    <string name="title_activity_main_menu">Dedica MNS</string>
 
 </resources>
