Implementada funcionalidad de imputación batch (en mock). Eliminado botón de logout en la main activity, y pasado al menú de todas (falta implementar funcionalidad de logout).

--- a/dedicaMNS/res/values-en/strings.xml
+++ b/dedicaMNS/res/values-en/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Dedica MNS</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_logout">Logout</string>
+    
     <string name="title_activity_login">Dedica MNS</string>
     
     <string name="connectButtonS">Connect</string>
