--- a/dedicaMNS/res/values/strings.xml
+++ b/dedicaMNS/res/values/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="app_name">Dedica MNS</string>
     <string name="menu_settings">Ajustes</string>
+    <string name="menu_logout">Logout</string>
+    
     <string name="title_activity_login">Dedica MNS</string>
     <string name="connectButtonS">Conectar</string>
     <string name="remmbemberUserCheckS">Recordarme</string>
@@ -12,5 +14,6 @@
     <string name="title_activity_month_view">Listado mes</string>
     <string name="title_activity_detail_day">Detalle día</string>
     <string name="title_activity_main_menu">Dedica MNS</string>
+    <string name="title_activity_batch_menu">BatchMenuActivity</string>
 
 </resources>
