--- a/dedicaMNS/res/values-en/strings.xml
+++ b/dedicaMNS/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dedica MNS</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_about_us">About Us</string>
     <string name="menu_logout">Logout</string>
     
     <string name="title_activity_login">Dedica MNS</string>
