--- a/dedicaMNS/res/values/strings.xml
+++ b/dedicaMNS/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Dedica MNS</string>
@@ -13,5 +14,7 @@
     <string name="title_activity_detail_day">Detalle día</string>
     <string name="title_activity_main_menu">Dedica MNS</string>
     <string name="title_activity_batch_menu">Dedica MNS</string>
+    <string name="title_activity_about">Acerca De</string>
+    <string name="about_text">\nAplicación Android para imputar las horas en las dedicaciones de MediaNet Software. Actualmente solo admite la imputación a un único proyecto diario. \nDesarrollada para que el minimizar el tiempo que perdemos en el apasionante mundo de la imputación de horas. \nTodos los accesos se hacen directamente a la web. El user y password se guarda internamente de manera segura.\n</string>
 
 </resources>
