Limpieza, todos, etc.

--- a/dedicaMNS/res/values-en/strings.xml
+++ b/dedicaMNS/res/values-en/strings.xml
@@ -15,5 +15,38 @@
     <string name="title_activity_batch_menu">Dedica MNS</string>
     <string name="title_activity_about">About</string>
     <string name="about_text">\nAndroid application for MediaNet Software Dedicaciones Web.\n</string>
+    <string name="batchTitle">Batch Input</string>
+    <string name="monthLabelBatch">"Month: "</string>
+    <string name="yearLabelBatch">"Year: "</string>
+    <string name="projectLabelBatch">"Project: "</string>
+    <string name="subprojectLabelBatch">"Subproject: "</string>
+    <string name="taskLabelBatch">"Task: "</string>
+    <string name="hourTypeLabelBatch">"Hour type: "</string>
+    <string name="inputBatchButton">Input</string>
+    <string name="cancelBatchButton">Cancel</string>
+    <string name="versionLabelAbout">Version</string>
+    <string name="hourLabelDetail">"Hours: "</string>
+    <string name="projectLabelDetail">"Project: "</string>
+    <string name="subprojectLabelDetail">"Subproject: "</string>
+    <string name="taskLabelDetail">"Task: "</string>
+    <string name="saveButtonDetail">Save</string>
+    <string name="removeButtonDetail">Remove</string>
+    <string name="monthListTitle">Month list</string>
+    <string name="inputAndCheckByDayButton">Input and check hours by day</string>
+    <string name="batchInputButton">BATCH input</string>
+    <string name="monthBatchInputButton">Month batch input</string>
+    <string name="msgConnected">Connected!</string>
+    <string name="msgWebError">Web dedicaciones error</string>
+    <string name="msgUserPassError">Enter your username and password from Medianet</string>
+    <string name="msgConnecting">Connecting&#8230;</string>
+    <string name="msgConnectingAlert">Connection in progress, please, wait</string>
+    <string name="msgGettingData">Getting needed data</string>
+    <string name="msgPleaseWait">Please, wait&#8230;</string>
+    <string name="msgErrorFormatHour">The hour format is incorrect</string>
+    <string name="msgErrorSelectProject">You have to select a project</string>
+    <string name="msgSaveOK">Saved successful hour record</string>
+    <string name="msgRemoveOK">Removed successful hour record</string>
+    <string name="msgSaving">Saving data</string>
+    <string name="msgRemoving">Removing data</string>
 
 </resources>
