--- a/dedicaMNS/res/values/strings.xml
+++ b/dedicaMNS/res/values/strings.xml
@@ -16,5 +16,38 @@
     <string name="title_activity_batch_menu">Dedica MNS</string>
     <string name="title_activity_about">Acerca De</string>
     <string name="about_text">Aplicación para imputar las horas en las dedicaciones de MediaNet Software. \nActualmente solo admite la imputación a un único proyecto diario. \n\nDesarrollada para minimizar el tiempo que perdemos en el apasionante mundo de la imputación de horas. \nTodos los accesos se hacen directamente a la web (de ahi el tiempo brutal que tarda en hacer algunas cosas&#8230;). \nEl user y password se guarda internamente de manera segura.\n</string>
+    <string name="batchTitle">Imputación en Batch</string>
+    <string name="monthLabelBatch">"Mes: "</string>
+    <string name="yearLabelBatch">"Año: "</string>
+    <string name="projectLabelBatch">"Proyecto: "</string>
+    <string name="subprojectLabelBatch">"Subproyecto: "</string>
+    <string name="taskLabelBatch">"Tarea: "</string>
+    <string name="hourTypeLabelBatch">"Tipo horario: "</string>
+    <string name="inputBatchButton">Imputar</string>
+    <string name="cancelBatchButton">Cancelar</string>
+    <string name="versionLabelAbout">Version</string>
+    <string name="hourLabelDetail">"Horas: "</string>
+    <string name="projectLabelDetail">"Proyecto: "</string>
+    <string name="subprojectLabelDetail">"Subproyecto: "</string>
+    <string name="taskLabelDetail">"Tarea: "</string>
+    <string name="saveButtonDetail">Guardar</string>
+    <string name="removeButtonDetail">Borrar</string>
+    <string name="monthListTitle">Listado mensual</string>
+    <string name="inputAndCheckByDayButton">Consulta e imputación por día</string>
+    <string name="batchInputButton">Imputacion BATCH</string>
+    <string name="monthBatchInputButton">Imputación batch mensual</string>
+    <string name="msgConnected">¡Conectado!</string>
+    <string name="msgWebError">Error de la web de dedicaciones</string>
+    <string name="msgUserPassError">Introduce tu usuario y contraseña de Medianet</string>
+    <string name="msgConnecting">Conectando&#8230;</string>
+    <string name="msgConnectingAlert">Conexión en progreso, por favor, espera</string>
+    <string name="msgGettingData">Obteniendo datos necesarios</string>
+    <string name="msgPleaseWait">Por favor, espera&#8230;</string>
+    <string name="msgErrorFormatHour">El formato de horas es incorrecto</string>
+    <string name="msgErrorSelectProject">Debe seleccionar algún proyecto</string>
+    <string name="msgSaveOK">Guardado registro de horas correctamente</string>
+    <string name="msgRemoveOK">Borrado registro de horas correctamente</string>
+    <string name="msgSaving">Guardando datos</string>
+    <string name="msgRemoving">Borrando datos</string>
 
 </resources>
