--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="title_activity_main_menu">Dedica MNS</string>
     <string name="title_activity_batch_menu">Dedica MNS</string>
     <string name="title_activity_about">Acerca De</string>
-    <string name="about_text">Aplicación para imputar las horas en las dedicaciones de MediaNet Software. \nAdmite varios proyectos por día. \n\nDesarrollada para minimizar el tiempo que perdemos en el apasionante mundo de la imputación de horas. \nTodos los accesos se hacen directamente a la web (html scraping, no hay servicios&#8230;). \nEl user y password se guardan internamente de manera segura.\n\nLa opción \"recarga de proyectos\" actualiza la base de datos con los proyectos actuales en medianet. Si al ir a imputar no encuentras tu proyecto, realiza la recarga. \n\nMás información en <a href="https://github.com/edwise/DedicaMNS">https://github.com/edwise/DedicaMNS</a>\n</string>
+    <string name="about_text">IMPORTANTE: La aplicación ha dejado de funcionar debido al cambio a la nueva web de dedicaciones. Gracias por haberla usado durante este tiempo :)\n\n --------------------------------------------------------- \n\nAplicación para imputar las horas en las dedicaciones de MediaNet Software. \nAdmite varios proyectos por día. \n\nDesarrollada para minimizar el tiempo que perdemos en el apasionante mundo de la imputación de horas. \nTodos los accesos se hacen directamente a la web (html scraping, no hay servicios&#8230;). \nEl user y password se guardan internamente de manera segura.\n\nLa opción \"recarga de proyectos\" actualiza la base de datos con los proyectos actuales en medianet. Si al ir a imputar no encuentras tu proyecto, realiza la recarga. \n\nMás información en <a href="https://github.com/edwise/DedicaMNS">https://github.com/edwise/DedicaMNS</a>\n</string>
     <string name="batchTitle">Imputación en Batch mensual</string>
     <string name="monthLabelBatch">"Mes: "</string>
     <string name="yearLabelBatch">"Año: "</string>
@@ -97,4 +97,5 @@
     <string name="paste">Pegar</string>
     <string name="delete">Borrar</string>
     <string name="optionsMenu">Opciones</string>
+    <string name="msgWebLocked">La web de dedicaciones ya no es compatible con la aplicación. Sorry :(</string>
 </resources>
